--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "monolog/monolog": "~1.20"
     },
     "require-dev": {
+        "lawoole/swoole-api": "dev-master",
         "phpunit/phpunit": "~5.7"
     },
     "autoload": {
