--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Homer\\": "src/"
+            "Lawoole\\Homer\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Homer\\Tests\\": "tests/"
+            "Tests\\": "tests/"
         }
     },
     "minimum-stability": "dev",
