--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,15 @@
     ],
     "require": {
         "php": ">=7.0",
-        "lawoole/swoole": "~0.1",
-        "illuminate/container": "~5.4",
-        "illuminate/support": "~5.4",
+        "lawoole/server": "0.1.*",
+        "lawoole/swoole": "0.1.*",
+        "illuminate/container": "5.5.*",
+        "illuminate/support": "5.5.*",
         "monolog/monolog": "~1.20"
     },
     "require-dev": {
-        "lawoole/swoole-api": "dev-master",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "lawoole/swoole-api": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -34,6 +35,11 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1-dev"
         }
     },
     "minimum-stability": "dev",
