--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "lawoole/server": "0.1.*",
         "lawoole/swoole": "0.1.*",
         "illuminate/container": "5.5.*",
-        "illuminate/support": "5.5.*",
-        "monolog/monolog": "~1.20"
+        "illuminate/support": "5.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.7",
